@@ -1,0 +1,65 @@
+<?php
+/***************************************************************
+ *  Copyright notice
+ *
+ *  (c) 2013 Xavier Perseguers <xavier@causal.ch>
+ *  All rights reserved
+ *
+ *  This script is part of the TYPO3 project. The TYPO3 project is
+ *  free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  The GNU General Public License can be found at
+ *  http://www.gnu.org/copyleft/gpl.html.
+ *
+ *  This script is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  This copyright notice MUST APPEAR in all copies of the script!
+ ***************************************************************/
+
+namespace Causal\Sphinx\Utility;
+
+/**
+ * General utility.
+ *
+ * @category    Utility
+ * @package     TYPO3
+ * @subpackage  tx_sphinx
+ * @author      Xavier Perseguers <xavier@causal.ch>
+ * @copyright   Causal Sàrl
+ * @license     http://www.gnu.org/copyleft/gpl.html
+ */
+class GeneralUtility {
+
+	/**
+	 * Returns meta-data for a given extension.
+	 *
+	 * @param string $extensionKey
+	 * @return array
+	 */
+	public static function getExtensionMetaData($extensionKey) {
+		$_EXTKEY = $extensionKey;
+		$EM_CONF = array();
+		$extPath = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($extensionKey);
+		include($extPath . 'ext_emconf.php');
+
+		$release = $EM_CONF[$_EXTKEY]['version'];
+		list($major, $minor, $_) = explode('.', $release, 3);
+		if (($pos = strpos($minor, '-')) !== FALSE) {
+			// $minor ~ '2-dev'
+			$minor = substr($minor, 0, $pos);
+		}
+		$EM_CONF[$_EXTKEY]['version'] = $major . '.' . $minor;
+		$EM_CONF[$_EXTKEY]['release'] = $release;
+
+		return $EM_CONF[$_EXTKEY];
+	}
+
+}
+
+?>
