@@ -1,0 +1,23 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path:'Css/Documentation.css')}" />
+</head>
+<body>
+
+<div class="center">
+	<f:image src="EXT:sphinx/Resources/Public/Images/warning.png" alt="" />
+
+	<h1>Oops, extension reST Documentation Viewer (restdoc) is outdated!</h1>
+
+	<h2>Please update it from <a href="#" onclick="jumpToExtensionManager();return false" target="_top">Extension Manager</a></h2>
+</div>
+
+<script type="text/javascript">
+	function jumpToExtensionManager() {
+		top.TYPO3.ModuleMenu.App.showModule('tools_ExtensionmanagerExtensionmanager');
+	}
+</script>
+
+</body>
+</html>
