@@ -1,3 +1,189 @@
+
+
+
+
+
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Users manual</title>
+	<link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/share.css" media="all" />
+	<link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/reset.css" media="all" />
+	<link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/grid.css" media="all" />
+	<link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/main.css" media="all" />
+	<link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/dip.css" media="all" />
+	<link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/print.css" media="print" />
+
+	<!--[if IE]><link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/ie.css" media="all" /><![endif]-->
+	<!--[if IE 7]><link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/ie7.css" media="all" /><![endif]-->
+	<!--[if IE 8]><link rel="stylesheet" href="http://docs.typo3.org/t3extras/css/ie8.css" media="all" /><![endif]-->
+
+	<link rel="stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main.css" type="text/css" />
+	<link rel="stylesheet" href="http://docs.typo3.org/css/t3_to_be_integrated.css" type="text/css" />
+	<link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
+	<link rel="alternate stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main_alt_0.css" type="text/css" title="Fixed width" />
+	<link rel="alternate stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main_alt_1.css" type="text/css" title="Adaptive width" />
+	<link rel="alternate stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main_alt_2.css" type="text/css" title="Style 2" />
+	<link rel="alternate stylesheet" href="http://docs.typo3.org/css/t3_org_doc_main_alt_3.css" type="text/css" title="Style 3" />
+
+	<script src="http://docs.typo3.org/t3extras/js/css_browser_selector.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/jquery-1.5.1.min.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/jquery.easing.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/jquery.tools.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/cufon.js"></script>
+	<script src="http://docs.typo3.org/t3extras/fonts/share.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/jquery.MultiFile.pack.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/prettyCheckboxes.js"></script>
+	<script src="http://docs.typo3.org/js/docstypo3org-1.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/jcookies.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/main.js"></script>
+	<script src="http://docs.typo3.org/t3extras/js/dip.js"></script>
+	<script src="http://docs.typo3.org/js/styleswitcher.js"></script>
+	<script src="http://docs.typo3.org/js/docstypo3org-2.js"></script>
+
+</head>
+
+<body class="js-off">
+<div class="p doc" id="page">
+	<div class="c cl" id="content">
+		<div id="aside" class="a">
+			<h3><a href="../../Index.html">Title 0.0.0 documentation</a></h3>
+			<ul class="current cur cnt-2" id="nav-aside">
+				<li class="toctree-l1 nav-aside-lvl1 current cur cnt-3"><a class="cnt-5 nav-aside-lvl1 reference internal" href="../Index.html">News: Versatile news system</a><ul class="current cur cnt-6 nav-aside-lvl2">
+					<li class="toctree-l2 nav-aside-lvl2 cnt-7"><a class="cnt-9 nav-aside-lvl2 reference internal" href="../Introduction/Index.html"><span>
+Introduction</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 current cur cnt-10"><a class="current cur cnt-12 nav-aside-lvl2 reference internal" href=""><span>
+Users manual</span></a><div class="flyOutToc container" id="flyOutToc">
+						<p>within this page:</p>
+						<f:format.raw>{toc}</f:format.raw>
+						<ul>
+							<li><a class="reference internal reference internal" href="#">Users manual</a><ul>
+							</ul>
+							</li>
+						</ul>
+					</div>
+						<ul class="cnt-13 nav-aside-lvl3">
+							<li class="toctree-l3 nav-aside-lvl3 cnt-14"><a class="cnt-16 nav-aside-lvl3 reference internal" href="AboutNewsCategoryRecords/Index.html"><span>
+About News &amp; category records</span></a></li>
+						</ul>
+					</li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-17"><a class="cnt-19 nav-aside-lvl2 reference internal" href="../Administration/Index.html"><span>
+Administration</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-20"><a class="cnt-22 nav-aside-lvl2 reference internal" href="../Configuration/Index.html"><span>
+Configuration</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-23"><a class="cnt-25 nav-aside-lvl2 reference internal" href="../Tutorial/Index.html"><span>
+Tutorial</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-26"><a class="cnt-28 nav-aside-lvl2 reference internal" href="../Templating/Index.html"><span>
+Templating</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-29"><a class="cnt-31 nav-aside-lvl2 reference internal" href="../ExtendNews/Index.html"><span>
+Extend news</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-32"><a class="cnt-34 nav-aside-lvl2 reference internal" href="../KnownProblems/Index.html"><span>
+Known problems</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-35"><a class="cnt-37 nav-aside-lvl2 reference internal" href="../Changelog/Index.html"><span>
+ChangeLog</span></a></li>
+					<li class="toctree-l2 nav-aside-lvl2 cnt-38"><a class="cnt-40 nav-aside-lvl2 reference internal" href="../BreakingChanges/Index.html"><span>
+Breaking Changes</span></a></li>
+				</ul>
+				</li>
+			</ul>
+
+		</div>
+
+		<div class="s d">
+
+
+			<div class="hnav-related-container">
+				<div class="hnav-related">
+					<ul>
+						<li>
+							<a href="../../Index.html" title="Title 0.0.0 documentation">Docstart</a>
+						</li>
+						<li>
+							<a href="../../_sources/Main/UsersManual/Index.txt" rel="nofollow">
+								Show Source
+							</a>
+						</li>
+						<li>
+							<a href="../../genindex.html" title="General Index" accesskey="I">index</a>
+						</li>
+						<li>
+							<a href="../Introduction/NeedHelp/Index.html" title="Need help?" accesskey="P">Previous</a>
+						</li>
+						<li>
+							<a href="../Index.html" title="News: Versatile news system" accesskey="U">Up</a>
+						</li>
+						<li>
+							<a href="AboutNewsCategoryRecords/Index.html" title="About News &amp; category records" accesskey="N">Next</a>
+						</li>
+					</ul>
+				</div>
+				<div class="hnav-related-2">
+					<div class="hnav-div-layout">
+						<a href="#" onclick="setActiveStyleSheet('Style 2'); return false;" title="experimental style 2" class="whitewashed">two</a>&nbsp;
+						<a href="#" onclick="setActiveStyleSheet('Style 3'); return false;" title="experimental style 3" class="whitewashed">three</a>
+						Layout:
+						<a href="#" onclick="setActiveStyleSheet('Fixed width'); return false;" title="select fixed width layout" class="alt-stylesheet-0">fixed</a>&nbsp;
+						<a href="#" onclick="setActiveStyleSheet('Adaptive width'); return false;" title="select adaptive width layout" class="alt-stylesheet-1">adaptive</a>&nbsp;
+					</div>
+				</div>
+			</div>
+			<div class="section" id="users-manual">
+				<f:format.raw>{content}</f:format.raw>
+			</div>
+
+			<div class="hnav-related-container">
+				<div class="hnav-related">
+					<ul>
+						<li>
+							<a href="../../Index.html" title="Title 0.0.0 documentation">Docstart</a>
+						</li>
+						<li>
+							<a href="../../_sources/Main/UsersManual/Index.txt" rel="nofollow">
+								Show Source
+							</a>
+						</li>
+						<li>
+							<a href="../../genindex.html" title="General Index" >index</a>
+						</li>
+						<li>
+							<a href="../Introduction/NeedHelp/Index.html" title="Need help?" >Previous</a>
+						</li>
+						<li>
+							<a href="../Index.html" title="News: Versatile news system" >Up</a>
+						</li>
+						<li>
+							<a href="AboutNewsCategoryRecords/Index.html" title="About News &amp; category records" >Next</a>
+						</li>
+					</ul>
+				</div>
+				<div class="hnav-related-2">
+					<div class="hnav-div-layout">
+						<a href="#" onclick="setActiveStyleSheet('Style 2'); return false;" title="experimental style 2" class="whitewashed">two</a>&nbsp;
+						<a href="#" onclick="setActiveStyleSheet('Style 3'); return false;" title="experimental style 3" class="whitewashed">three</a>
+						Layout:
+						<a href="#" onclick="setActiveStyleSheet('Fixed width'); return false;" title="select fixed width layout" class="alt-stylesheet-0">fixed</a>&nbsp;
+						<a href="#" onclick="setActiveStyleSheet('Adaptive width'); return false;" title="select adaptive width layout" class="alt-stylesheet-1">adaptive</a>&nbsp;
+					</div>
+				</div>
+			</div>
+
+		</div><!-- /#content -->
+	</div><!-- /.d -->
+	<div id="header" class="h">
+		<a id="logo" href="#"><img width="118" height="34" alt="TYPO3 Logo" src="http://docs.typo3.org/t3extras/i/typo3-logo.png"></a>
+		<ul class="nav" id="ul-nav">
+			<!-- #ul-nav gets replaced by js -->
+			<li>&nbsp;</li>
+		</ul>
+		<div class="header-bg"></div>
+	</div>
+</div><!-- /#page -->
+<div id="naviwest"><div id="naviwestpayload"></div></div>
+</body>
+</html>
+
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -5,12 +191,7 @@
 </head>
 <body>
 
-<div style="background-color: yellow">
-	<f:format.raw>{toc}</f:format.raw>
-</div>
-<div style="background-color: green">
-	<f:format.raw>{content}</f:format.raw>
-</div>
+
 
 </body>
 </html>
